--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ __pycache__/
 !/private_data/.gitignore
 !/private_data/shape_params_data/
 !/private_data/shape_params_data/**
+
+# trash
+/trash/**
+!/trash/.gitignore
